PR/51277: Fix compat32 coredumping that broke with the aux vector note addition.